增加了打卡机制，记录了上班下班的时间。

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
             "App\\": "app/"
         },
         "files": [
-            "app/Helpers/selectOptions.php"
+            "app/Helpers/selectOptions.php",
+            "app/Helpers/common.php"
         ]
     },
     "autoload-dev": {
